Signed-off-by: Sami Ul Hassan <samihassan0802@gmail.com>

--- a/reactApp/src/styles.less
+++ b/reactApp/src/styles.less
@@ -1,4 +1,13 @@
 // global styles
+body{
+    font-family: 'Roboto', sans-serif !important;
+    overflow-x: hidden !important;
+}
+
+.bg-grey{
+    background-color: #d3ddea;
+}
+
 a { cursor: pointer; }
 
 .app-container {
