--- a/reactApp/src/styles.less
+++ b/reactApp/src/styles.less
@@ -1,19 +1,89 @@
 // global styles
-body{
+body {
     font-family: 'Roboto', sans-serif !important;
     overflow-x: hidden !important;
 }
 
-.bg-grey{
+.bg-grey {
     background-color: #d3ddea;
 }
 
-a { cursor: pointer; }
+a {
+    cursor: pointer;
+}
 
 .app-container {
     min-height: 320px;
 }
 
+@media (min-width: 1300px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1040px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1040px;
+    }
+}
+
+@media (min-width: 1500px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1140px;
+    }
+}
+@media (min-width: 1600px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1440px;
+    }
+}
+
+@media (min-width: 1700px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1440px;
+    }
+}
+
+@media (min-width: 1800px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1440px;
+    }
+}
+
+@media (min-width: 1900px) {
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1540px;
+    }
+}
 .admin-nav {
     padding-top: 0;
     padding-bottom: 0;
