--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -2,12 +2,32 @@
     background: linear-gradient(0deg, #294f7b, #0f4687 50%);
 }
 
-.navbar{
+.navbar {
 
     .navbar-nav {
         a {
             color: #fff !important;
-            
+
+        }
+    }
+
+    .login-btn {
+        display: flex;
+        align-items: center;
+
+        p {
+            margin: 0;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 1;
+        }
+
+        .profile-pic {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin: 0 15px;
         }
     }
 }
