--- a/reactApp/src/home/index.less
+++ b/reactApp/src/home/index.less
@@ -3174,7 +3174,7 @@
     margin: 0 20px 20px;
     position: absolute;
     z-index: 10;
-    top: 65%;
+    top: 618px;
     left: 0;
     right: 0;
     justify-content: space-evenly;
@@ -3399,6 +3399,10 @@
         }
     }
 
+    .qoute {
+        width: 12%;
+    }
+
     .testimonial-video {
         position: relative;
         display: flex;
@@ -3443,4 +3447,159 @@
         }
     }
 
+}
+
+.our-partner {
+
+    .slick-next:before,
+    .slick-prev:before {
+        display: none;
+    }
+
+    .charities {
+        margin-bottom: 20px;
+    }
+
+    .slick-next {
+        z-index: 1;
+        top: 92%;
+        left: 96%;
+        right: unset;
+        width: unset;
+        height: unset;
+
+        img {
+            width: 70%;
+        }
+    }
+
+    .slick-prev {
+        z-index: 1;
+        top: 92%;
+        left: 92%;
+        right: unset;
+        width: unset;
+        height: unset;
+
+        img {
+            width: 70%;
+        }
+
+    }
+
+    .learn-more {
+        a {
+            box-shadow: 0px 2px 9px 5px #00000047;
+        }
+    }
+
+}
+
+.forms {
+    .left {
+        border-right: 1px solid #898989;
+
+        h5 {
+            font-size: 30px;
+            color: #555555;
+        }
+    }
+
+    .heart-text {
+        p {
+            color: #585555;
+            line-height: 1.3;
+            font-weight: 500;
+            font-size: 28px;
+        }
+    }
+
+    .subscription-form {
+        width: 25vw;
+
+        input {
+            width: 100%;
+            height: 50px;
+        }
+
+        span {
+            color: #757575;
+        }
+
+        a {
+            box-shadow: 0px 6px 7px 0px #00000047;
+            top: 23px;
+        }
+    }
+}
+
+.footer {
+    padding-bottom: 10px;
+}
+
+@media screen and (min-width: 1140px) and (max-width: 1399px) {
+    .explore {
+        .progress-box {
+            height: 140px;
+            width: 130px;
+        }
+
+        .headingStyle3 {
+            font-size: 45px;
+        }
+
+        .headingStyle4{
+            font-size: 38px;
+        }
+
+        .details-banner {
+            .misc-box span small {
+                font-size: 9px;
+            }
+        }
+
+        .btnStyle2 {
+            a {
+                font-size: 16px;
+            }
+        }
+
+        .paraStyle3{
+            font-size: 12px;
+        }
+    }
+}
+
+@media screen and (min-width: 1400px) and (max-width: 1700px) {
+
+    .explore {
+        .progress-box {
+            height: 140px;
+            width: 130px;
+        }
+
+        .headingStyle3 {
+            font-size: 50px;
+        }
+
+        .details-banner {
+            .misc-box span small {
+                font-size: 9px;
+            }
+        }
+
+        .headingStyle4{
+            font-size: 42px;
+        }
+
+        .btnStyle2 {
+            a {
+                font-size: 18px;
+            }
+        }
+
+        .paraStyle3{
+            font-size: 12px;
+        }
+    }
 }
