Home page Mobile Responsive UI

--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -13,7 +13,15 @@
 
     .login-btn {
         display: flex;
+        flex-direction: row;
         align-items: center;
+
+        button {
+            border: none;
+            span{
+                filter: invert(1);
+            }
+        }
 
         p {
             margin: 0;
