--- a/reactApp/src/home/index.less
+++ b/reactApp/src/home/index.less
@@ -3678,6 +3678,10 @@
 
 @media screen and (max-width: 991px) {
 
+    .m-block{
+        display: block !important;
+    }
+
     .m-none {
         display: none !important;
     }
@@ -3998,7 +4002,8 @@
         border-radius: 50px;
         border: none;
         padding: 25px 10px;
-        width: 46vw;
+        width: 96vw;
+        margin-top: 35px;
 
         .modal-body {
             display: flex;
