Home page UI Fixes

--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -1,5 +1,5 @@
 .bg-gradient {
-    background: linear-gradient(0deg, #294f7b, #0f4687 50%);
+    background: linear-gradient(0deg, #19304b, #0f4687 80%);
 }
 
 .navbar {
@@ -7,7 +7,8 @@
     .navbar-nav {
         a {
             color: #fff !important;
-
+            font-size: 18px;
+            font-weight: 400;
         }
     }
 
