Homepage fixes, prize page UI

--- a/reactApp/src/_shared/header/index.less
+++ b/reactApp/src/_shared/header/index.less
@@ -1,14 +1,15 @@
-.bg-gradient {
-    background: linear-gradient(0deg, #19304b, #0f4687 80%);
-}
-
-.navbar {
-
+.customNavbar {
+    background: linear-gradient(0deg, #294f7b, #0f4687 50%);
     .navbar-nav {
-        a {
+        .nav-link {
             color: #fff !important;
             font-size: 18px;
-            font-weight: 400;
+            font-weight: 500;
+        }
+        a {
+            &:hover {
+                text-decoration: none;
+            }
         }
     }
 
