--- a/reactApp/src/home/index.less
+++ b/reactApp/src/home/index.less
@@ -9,9 +9,9 @@
     margin-bottom: 20px;
 
     &::after {
-        height: 5px;
+        height: 15px;
         content: "";
-        width: 100px;
+        width: 110px;
         background-color: #f7d125;
         display: block;
     }
@@ -110,13 +110,9 @@
         .images {
             position: relative;
 
-            .c-overlay {
-                background: linear-gradient(90deg, #104a8ed6, #ffffff00 50%);
-            }
-
             .slider-img {
                 background-size: cover;
-                background-position: 100% 75%;
+                background-position: 100%;
                 background-repeat: no-repeat;
                 height: 600px;
                 width: 100%;
@@ -675,7 +671,7 @@
         text-transform: uppercase;
         color: #104a8e;
         margin-top: 30px;
-        font-weight: 800;
+        font-weight: 900;
         font-size: 68px;
     }
 
@@ -689,8 +685,8 @@
 
     .paraStyle1 {
         color: #104a8e;
-        font-size: 26px;
-        font-weight: 600;
+        font-size: 24px;
+        font-weight: 500;
     }
 
     .paraStyle2 {
@@ -707,18 +703,13 @@
         font-weight: 600;
     }
 
-
-    .btnStyle2 {
-        margin-bottom: 50px;
-    }
-
     .btnStyle2 a {
         display: inline-block;
         background-color: #104a8e;
         color: #ffff;
         padding: 7px 15px;
         text-transform: uppercase;
-        box-shadow: 0px 3px 7px 0px #0000009e;
+        box-shadow: 0px 3px 7px 0px #0000007a;
         font-size: 22px;
         letter-spacing: 2px;
         font-weight: 400;
@@ -823,10 +814,11 @@
     .icon {
         position: absolute;
         right: 5%;
-        top: 20%;
+        top: 25%;
         background-color: #cdcdcd;
         border-radius: 50%;
         padding: 14px 13px;
+        cursor: pointer;
 
         img {
             width: 85%;
@@ -3256,10 +3248,11 @@
         .item-wrapper {
             display: flex;
             justify-content: space-between;
+            align-items: center;
 
             .text-box {
                 display: flex;
-                // margin-right: 40px;
+                margin-left: 10px;
 
                 .number-text {
                     font-size: 22px;
@@ -3318,11 +3311,11 @@
     }
 
     .slick-next {
-        right: -6%;
+        right: -5.5%;
     }
 
     .slick-prev {
-        left: -7.5%;
+        left: -5.5%;
 
         img {
             transform: rotate(180deg);
@@ -3726,9 +3719,10 @@
 
 
 
+
 @media screen and (max-width: 991px) {
 
-    .m-block {
+    .m-block{
         display: block !important;
     }
 
@@ -3739,6 +3733,10 @@
     .desktop-none {
         display: none !important;
     }
+
+    // .m-display {
+    //     display: flex !important;
+    // }
 
     #how-it-works {
         display: none !important;
@@ -4021,46 +4019,46 @@
         }
     }
 
-    .our-partner {
-        .container-fluid {
+    .our-partner{
+        .container-fluid{
             padding: 0 !important;
         }
     }
 
-    .forms {
-        .left {
+    .forms{
+        .left{
             border: none;
         }
 
         .subscription-form {
             width: 76vw;
 
-            a {
+            a{
                 top: 26px;
             }
         }
 
-        .heart-text {
-            p {
+        .heart-text { 
+            p{
                 font-size: 17px;
             }
         }
     }
 
-    .footer {
+    .footer{
         background: #a8bdd6;
 
-        .mobile-icons {
-            a {
-                img {
+        .mobile-icons{
+            a{
+                img{
                     width: 40px;
                     height: 40px;
                 }
             }
         }
 
-        .footer-icons {
-            img {
+        .footer-icons{
+            img{
                 width: 150px;
             }
         }
