--- a/reactApp/src/styles.less
+++ b/reactApp/src/styles.less
@@ -4,7 +4,9 @@ body {
     font-family: 'Roboto', sans-serif !important;
     overflow-x: hidden !important;
 }
-
+h1, h2, h3, h4, h5 {
+    font-family: 'Roboto', sans-serif !important; 
+}
 .bg-grey {
     background-color: #d3ddea;
 }
@@ -12,7 +14,9 @@ body {
 a {
     cursor: pointer;
 }
-
+p {
+    font-size: 18px;
+}
 .app-container {
     min-height: 320px;
 }
