--- a/reactApp/src/pages/Signup/Signup.less
+++ b/reactApp/src/pages/Signup/Signup.less
@@ -1,6 +1,116 @@
 .SignupForm {
-    margin-top: 30px;
-
+    margin: 30px 0;
+    .forgotBox {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        div {
+            &:first-child {
+                input {
+                    margin-right: 10px;
+                }
+                label {
+                    margin-bottom: 0;
+                    font-size: 18px;
+                    color: #393939;
+                }
+            }
+            &:nth-child(2) {
+                a {
+                    color: #393939;
+                    font-size: 18px;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+    .SignUpBox {
+        box-shadow: 0px 2px 8px 0px #d9d9d970;
+        padding: 50px 40px 20px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+    .terms {
+        display: flex;
+        align-items: center;
+        label {
+            font-size: 18px;
+        }
+        input {
+            margin-right: 10px;
+        }
+    }
+    .signupBtn {
+        background-color: #1663BE;
+        font-size: 26px;
+        color: #fff;
+        border-radius: 5px;
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-top: 10px;
+        height: 70px;
+        &:focus {
+            box-shadow: initial;
+            outline: initial;
+        }
+    }
+    .subscription-form {
+        .react-tel-input {
+            .special-label {
+                display: none;
+            }
+        }
+        input {
+            border: 1px solid #707070;
+            border-radius: 10px;
+            &:focus {
+                box-shadow: inherit;
+                outline: none;
+            }
+        }
+        .eyeImg {
+            position: absolute;
+            top: 9px;
+            right: 12px;
+            cursor: pointer;
+        }
+    }
+.forminput {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .form-control {
+        height: 50px;
+        border: 1px solid #707070;
+        border-radius: 10px;
+        &:focus {
+            box-shadow: inherit;
+            outline: none;
+        }
+    }
+    .subscription-form:first-child {
+        margin-bottom: 0 !important;
+    }
+    .subscription-form {
+        width: 47% !important;
+        margin: 0;
+    }
+}
+.formSelect {
+        margin: 15px 0;
+        display: flex;
+        div {
+            width: 40%;
+            input {
+                margin-right: 10px;
+            }
+            label {
+                color: #393939;
+                font-size: 18px;
+            }
+        }
+}
     .nav-pills {
         justify-content: space-between;
         .nav-item {
@@ -27,8 +137,9 @@
 
             .nav-link {
                 opacity: 0.3;
-                background-color: #007bff;
+                background-color: #1663BE;
                 color: #fff;
+                padding: 1rem 1rem;
             }
 
             .nav-link.active {
@@ -37,8 +148,18 @@
 
             a {
                 font-weight: 500;
-                font-size: 18px;
+                font-size: 22px;
             }
+        }
+    }
+    .LoginCont {
+        .subscription-form {
+            &:first-child {
+                margin-bottom: 30px !important;
+            }
+        }
+        .LoginBtn {
+            margin-top: 70px;
         }
     }
     .formCont {
@@ -48,7 +169,7 @@
             }
             width: 100%;
             input {
-               height: 40px;
+               height: 50px;
             }
             span {
                 background-color: white;
@@ -63,4 +184,98 @@
         }
     }
     
+}
+.signUpSlider {
+    width: 80%;
+    padding: 65px 0px;
+    h1 {
+        color: #104A8E;
+        text-align: center;
+        font-size: 45px;
+        font-weight: 900;
+        margin-bottom: 50px;
+    }
+    .slick-slider {
+        .slick-slide {
+            div {
+                &:focus-visible {
+                    outline: none;
+                }
+                img {
+                    height: 30rem;
+                    width: 100%;
+                }
+            }
+        }
+        .slide__caption {
+            margin-top: 70px;
+            text-align: center;
+            h3 {
+                color: #104A8E;
+            }
+            p {
+                font-size: 12px;
+                color: #EDB200;
+            }
+        }
+        .slick-center .slide__caption {
+            opacity: 1 !important;
+        }
+    }
+    .slick-slider {
+        width: 100%;
+      }
+      .slick-list {
+        padding: 0;
+      }
+      .slick-arrow {
+        display: none !important;
+      }
+      .slick-slide {
+        opacity: 0.5;
+        .slide__caption {
+            opacity: 0;
+        }
+        &:nth-child(odd) {
+            margin-top: 30px;
+        }
+      }
+      .slick-center {
+        opacity: 1;
+      }
+      .slick-active .slick-center  {
+          opacity: 1;
+      }
+}
+.LoginWith {
+    div {
+        background-color: #1663BE;
+        height: 44px;
+        border-radius: 25px;
+        text-align: center;
+        width: 65%;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        padding: 0px 10px;
+        justify-content: center;
+        position: relative;
+        margin: 0px auto;
+        cursor: pointer;
+        span {
+            position: absolute;
+            left: 15px;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 100px;
+            height: 30px;
+            width: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:first-child {
+            margin: 50px auto 20px;
+        }
+    }
 }
